# microsaas-example

./: .gitignore  README.md  diagram.md  main.py  pyproject.toml
.streamlit/: secrets.toml.example
st_paywall/: aggregate_auth.py  google_auth.py  stripe_auth.py
